# AllegroPP

./: .gitignore  AllegroPP.project  CMakeLists.txt  README.md  allegro.cpp  allegro.h  doxygen.conf  gui.cpp  gui.h  main.cpp  sprites.h
allegro/: allegro.cpp  allegro.h  gui.h  mouse.cpp  mouse.h
examples/: CMakeLists.txt  example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp
include/allegro++/: allegro.h  allegro_class.h  color.h  gui.h  math.h  mouse.h  primitives.h  sprites.h  utility.h
src/allegro++/: button.cpp  color.cpp  cursor.cpp  events.cpp  gui.cpp  image.cpp  init.in.cpp  inputbox.cpp  loops.cpp  math.cpp  messages.cpp  mouse.cpp  primitives.cpp  primitives.cpp.in  sprites.cpp  utility.cpp
